--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -24,11 +24,27 @@
 }
 
 @media not all and (hover: none) and (pointer: coarse) {
+	#masked {
+		mask-position: calc(var(--x) - var(--size)/2) calc(var(--y) - var(--size)/2);
+		mask-size: var(--size);
+	}
+
 	.touch {
 		@apply hidden;
 	}
+}
 
+@media (hover: none) and (pointer: coarse) {
 	#masked {
-		mask-size: 0px;
+		--size-touch: 100px;
+		mask-position: 50% calc(var(--y-touch) - var(--size-touch)/2);
+		mask-size: var(--size-touch);
+		transition-property: mask-size;
+		transition-duration: 900ms;
+
+	}
+
+	#masked.is-pressed {
+		--size-touch: 4000px;
 	}
 }
