create reusable components for splitting and animating text

--- a/frontend/src/app/globals.scss
+++ b/frontend/src/app/globals.scss
@@ -4,9 +4,9 @@
 
 @layer base {
 	html {
-	  -webkit-tap-highlight-color: transparent;
+		-webkit-tap-highlight-color: transparent;
 	}
-  }
+}
 
 @layer utilities {
 	/* Hide scrollbar for Chrome, Safari and Opera */
@@ -21,6 +21,12 @@
 	}
 }
 
+@for $i from 1 through 10 {
+	.line:nth-child(#{$i}) {
+		clip-path: inset(-20% calc(var(--left) - (var(--line-count) - $i) * 100%) -20% 0);
+	}
+}
+
 #masked {
 	mask-image: url(/mask.svg);
 	mask-origin: content-box;
@@ -31,7 +37,8 @@
 
 @media not all and (hover: none) and (pointer: coarse) {
 	#masked {
-		mask-position: calc(var(--x) - var(--size)/2) calc(var(--y) - var(--size)/2);
+		mask-position: calc(var(--x) - var(--size) / 2)
+			calc(var(--y) - var(--size) / 2);
 		mask-size: var(--size);
 	}
 
@@ -43,11 +50,11 @@
 @media (hover: none) and (pointer: coarse) {
 	#masked {
 		--size-touch: 0px;
-		mask-position: calc(var(--x-touch) - var(--size-touch)/2) calc(var(--y-touch) - var(--size-touch)/2);
+		mask-position: calc(var(--x-touch) - var(--size-touch) / 2)
+			calc(var(--y-touch) - var(--size-touch) / 2);
 		mask-size: var(--size-touch);
 		transition-property: mask-size, mask-position;
 		transition-duration: 0.5s;
-
 	}
 
 	#masked.is-pressed {
