add a tailwind touch screen variant

--- a/frontend/src/app/globals.scss
+++ b/frontend/src/app/globals.scss
@@ -35,22 +35,13 @@
 	mask-repeat: no-repeat;
 	color: black;
 	/* pointer-events: none; */
+	--size: 500px;
+	mask-position: calc(var(--x) - calc(var(--size) * var(--scale)) / 2)
+		calc(var(--y) - calc(var(--size) * var(--scale)) / 2);
+	mask-size: calc(var(--size) * var(--scale));
 }
 
-@media not all and (hover: none) and (pointer: coarse) {
-	#masked {
-		--size: 500px;
-		mask-position: calc(var(--x) - calc(var(--size) * var(--scale)) / 2)
-			calc(var(--y) - calc(var(--size) * var(--scale)) / 2);
-		mask-size: calc(var(--size) * var(--scale));
-	}
-
-	.touch {
-		@apply hidden;
-	}
-}
-
-@media (hover: none) and (pointer: coarse) {
+@screen touch {
 	#masked {
 		--size-touch: 3000px;
 		mask-position: calc(
