--- a/frontend/src/app/globals.scss
+++ b/frontend/src/app/globals.scss
@@ -19,6 +19,21 @@
 		-ms-overflow-style: none; /* IE and Edge */
 		scrollbar-width: none; /* Firefox */
 	}
+
+	/* Chrome, Edge, and Safari */
+	// .custom-scrl-bar::-webkit-scrollbar {
+	// 	width: 12px;
+	//   }
+	
+	//   .custom-scrl-bar::-webkit-scrollbar-track {
+	// 	background: #000;
+	//   }
+	
+	//   .custom-scrl-bar::-webkit-scrollbar-thumb {
+	// 	background-color: #8f54a0;
+	// 	border-radius: 10px;
+	// 	border: 3px solid #000;
+	//   }
 }
 
 @for $i from 1 through 10 {
