--- a/frontend/src/app/game/styles.css
+++ b/frontend/src/app/game/styles.css
@@ -5,8 +5,8 @@
   }
   
   .swiper-slide {
-    text-align: center;
-    font-size: 18px;
+    /* text-align: center; */
+    /* font-size: 18px; */
     background: #fff;
   
     /* Center slide text vertically */
@@ -17,7 +17,7 @@
   
   .swiper-slide img {
     display: block;
-    width: 100%;
-    height: 100%;
+    /* width: 100%;
+    height: 100%; */
     object-fit: cover;
   }
