divide mask size by half on smaller screens

--- a/frontend/src/app/globals.scss
+++ b/frontend/src/app/globals.scss
@@ -24,11 +24,11 @@
 	// .custom-scrl-bar::-webkit-scrollbar {
 	// 	width: 12px;
 	//   }
-	
+
 	//   .custom-scrl-bar::-webkit-scrollbar-track {
 	// 	background: #000;
 	//   }
-	
+
 	//   .custom-scrl-bar::-webkit-scrollbar-thumb {
 	// 	background-color: #8f54a0;
 	// 	border-radius: 10px;
@@ -45,12 +45,21 @@
 }
 
 #masked {
+	--size: 250px;
+}
+
+@screen lg {
+	#masked {
+		--size: 500px;
+	}
+}
+
+#masked {
 	mask-image: url(/mask.svg);
 	mask-origin: content-box;
 	mask-repeat: no-repeat;
 	color: black;
 	/* pointer-events: none; */
-	--size: 500px;
 	mask-position: calc(var(--x) - calc(var(--size) * var(--scale)) / 2)
 		calc(var(--y) - calc(var(--size) * var(--scale)) / 2);
 	mask-size: calc(var(--size) * var(--scale));
@@ -72,5 +81,5 @@
 }
 
 .myshadow {
-	filter:drop-shadow(0px 4px 35px rgba(202, 241, 90, 0.50)) ;
+	filter: drop-shadow(0px 4px 35px rgba(202, 241, 90, 0.5));
 }
